# AvisaLogin

./: .env  .gitignore  Cargo.toml  caddyfile
_front/: front.html
config/: credentials.json  settings.toml
public/: 404.html  index.html  login.html
src/: .env  main.rs
src/config/: google_creds.rs  mod.rs  settings.rs
src/models/: user.rs
src/routes/: auth.rs  auth_google.rs  auth_login.rs  mod.rs
src/services/: db.rs  google_oauth.rs  mod.rs
