[package]
name = "avisalogin"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.39"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.217"
serde_json = "1.0.138"
sqlx = {version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
uuid = { version = "1.13.1", features = ["v4"] }
dotenvy = "0.15.7"

